scroll flickering improved for Safari still buggy on FF

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,7 +144,7 @@ img {
    z-index: 10;
 }
 img.loaded {
-   transition-delay: 1s;
+   transition-delay: 1.5s;
    opacity: 1;
 }
 .loading {
